[package]
name = "glfw-sys-passthrough"
version = "4.0.0+3.3.5"
description = "glfw-sys crate patched with passthrough feature"
documentation = "http://www.glfw.org/documentation.html"
homepage = "http://www.glfw.org/"
repository = "https://github.com/coderedart/glfw-sys"
readme = "README.md"
license = "Zlib"
build = "build.rs"
links = "glfw"

[lib]
name = "glfw_sys"
path = "lib.rs"

[build-dependencies]
cmake = "0.1"

[features]
wayland = []
